tests/snapshots/structure__max_depth__depth_0__smoke.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--no-types
--no-traits
--no-fns
--max-depth
0

STDERR:

STDOUT:

crate smoke
