tests/snapshots/structure__max_depth__depth_0__smoke_structure.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--no-types
--no-traits
--no-fns
--max-depth
0

STDERR:

STDOUT:

crate smoke_structure
